@@ -1,3 +1,4 @@
+* Allow column resizing
 * Add simple chat widget on sidebar
 * Support color as type of icon and image
 * Support color widget on form view
